Fixed logo text alignment

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -58,7 +58,9 @@
         width: auto;
     }
     
-    .logo-text {display: none !important}
+    .logo-text {margin-top: 23px}
+    
+    .sticky-navigation .logo-text {display: none !important}
     
     .mobile-nav-icon {
         position: absolute;
